--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   favorite_button: ^0.0.4
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
