--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   favorite_button: ^0.0.4
   google_nav_bar: ^5.0.6
   collection: ^1.18.0
+  expandable_text: ^2.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
